<resources>
    <string name="app_name">KarlstadBuss</string>
    <string name="vuxen">VUXEN</string>
    <string name="enkel">ENKEL</string>
    <string name="karlstadbuss">KARLSTADSBUSS</string>
    <string name="phoneNumber">054-540 46 00</string>
    <string name="timer">00:59:59</string>
    <string name="howManyTickets">1/1</string>
    <string name="totalAmontMoney">23.00 kr</string>
    <string name="valid">GILTIG</string>
    <string name="startTime">00:00</string>
    <string name="endTime">00:00</string>
</resources>
