<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="horizontal|vertical"
    android:padding="0dp"
    tools:context="se.appson.www.karlstadbuss.MainActivity"
    tools:layout_editor_absoluteY="25dp">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="357dp"
        android:layout_height="46dp"
        app:srcCompat="@drawable/validbackground"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="307dp" />

    <ImageView
        android:id="@+id/sunImage"
        android:layout_width="45dp"
        android:layout_height="33dp"
        app:srcCompat="@drawable/solen"
        tools:layout_editor_absoluteX="343dp"
        tools:layout_editor_absoluteY="517dp" />

    <TextView
        android:id="@+id/karlstadBussTextLowerCorner"
        android:layout_width="108dp"
        android:layout_height="27dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="524dp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/karlstadBussTextLowerCorner"
        android:background="@android:color/darker_gray"
        tools:layout_editor_absoluteY="3dp" />


    <ImageView
        android:id="@+id/manImage"
        android:layout_width="17dp"
        android:layout_height="45dp"
        app:srcCompat="@drawable/gubbe"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="7dp" />

    <TextView
        android:id="@+id/categoryOfAgeText"
        android:layout_width="103dp"
        android:layout_height="31dp"
        android:text="@string/vuxen"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/typeOfTicketText"
        android:layout_width="33dp"
        android:layout_height="16dp"
        android:text="@string/enkel"
        android:textColor="@android:color/darker_gray"
        android:textSize="10sp"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="37dp" />

    <TextView
        android:id="@+id/karlstadBussText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/karlstadbuss"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="83dp" />


    <VideoView
        android:id="@+id/authenticationVideo"
        android:layout_width="334dp"
        android:layout_height="146dp"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="362dp" />

    <TextClock
        android:id="@+id/currentTimeClock"
        android:layout_width="274dp"
        android:layout_height="98dp"
        android:format24Hour="hh:mm"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:timeZone="GMT+0100"

        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="380dp" />

    <EditText
        android:id="@+id/phonenumberText"
        android:layout_width="131dp"
        android:layout_height="26dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:inputType="number|phone"
        android:text="@string/phoneNumber"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        tools:layout_editor_absoluteY="525dp" />

    <ImageView
        android:id="@+id/phoneImage"
        android:layout_width="21dp"
        android:layout_height="19dp"
        app:srcCompat="@drawable/phoneblack"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="530dp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="338dp"
        android:layout_height="122dp"
        android:layout_centerInParent="true"
        android:background="@drawable/boarders"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="151dp">

    </LinearLayout>

    <TextView
        android:id="@+id/countDownText"
        android:layout_width="218dp"
        android:layout_height="81dp"
        android:fadingEdge="none"
        android:padding="10dp"
        android:text="@string/timer"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="169dp" />


    <ImageView
        android:id="@+id/countDownImage"
        android:layout_width="63dp"
        android:layout_height="65dp"
        app:srcCompat="@drawable/timer"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="177dp" />

    <view
        android:id="@+id/lineUnderKarlstadBuss"
        class="android.support.v7.widget.ActionMenuView"
        id="@+id/view"
        android:layout_width="344dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/howManyTicketstext"
        android:layout_width="51dp"
        android:layout_height="20dp"
        android:background="@android:color/white"
        android:text="@string/howManyTickets"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="320dp"
        tools:layout_editor_absoluteY="3dp" />

    <TextView
        android:id="@+id/totalCostText"
        android:layout_width="58dp"
        android:layout_height="22dp"
        android:text="@string/totalAmontMoney"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="320dp"
        tools:layout_editor_absoluteY="24dp" />

    <TextView
        android:id="@+id/startDateText"
        android:layout_width="151dp"
        android:layout_height="19dp"
        android:text="@string/startTime"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="326dp" />

    <TextView
        android:id="@+id/validText"
        android:layout_width="59dp"
        android:layout_height="16dp"
        android:text="@string/valid"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="291dp" />


    <TextView
        android:id="@+id/validTimeEnds"
        android:layout_width="144dp"
        android:layout_height="30dp"
        android:text="@string/endTime"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="323dp" />


</android.support.constraint.ConstraintLayout>
